this a pictures can't show display

--- a/index.html
+++ b/index.html
@@ -44,54 +44,7 @@
                     </thead>
 
                     <tbody id="data">
-                            <tr>
-                            <td>1</td>
-                            <td><img src="./img/Gintoki icon.jpg" alt="" width="50" height="50"></td>
-                            <td>Gintoki</td>
-                            <td>26</td>
-                            <td>Ado</td>
-                            <td>Gintoki@gmail.com</td>
-                            <td>0854741236</td>
-                            <td>officer</td>
-                            <td>13/07/24</td>
-                            <td><button class="btn btn-success" data-bs-toggle="modal"
-                                data-bs-target="#readData"><i class="bi bi-eye"></i></button>
-                                <button class="btn btn-primary"><i class="bi bi-pen"></i></button>
-                                <button class="btn btn-danger"><i class="bi bi-trash"></i></button>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>2</td>
-                            <td><img src="./img/Gintoki icon.jpg" alt="" width="50" height="50"></td>
-                            <td>Gintoki</td>
-                            <td>26</td>
-                            <td>Ado</td>
-                            <td>Gintoki@gmail.com</td>
-                            <td>0854741236</td>
-                            <td>officer</td>
-                            <td>13/07/24</td>
-                            <td><button class="btn btn-success"><i class="bi bi-eye"></i></button>
-                                <button class="btn btn-primary"><i class="bi bi-pen"></i></button>
-                                <button class="btn btn-danger"><i class="bi bi-trash"></i></button>
-                            </td>
-                        </tr>
-
-                        <tr>
-                            <td>3</td>
-                            <td><img src="./img/Gintoki icon.jpg" alt="" width="50" height="50"></td>
-                            <td>Gintoki</td>
-                            <td>26</td>
-                            <td>Ado</td>
-                            <td>Gintoki@gmail.com</td>
-                            <td>0854741236</td>
-                            <td>officer</td>
-                            <td>13/07/24</td>
-                            <td><button class="btn btn-success"><i class="bi bi-eye"></i></button>
-                                <button class="btn btn-primary"><i class="bi bi-pen"></i></button>
-                                <button class="btn btn-danger"><i class="bi bi-trash"></i></button>
-                            </td>
-                        </tr>
+                            
                     </tbody>
 
                 </table>
@@ -118,37 +71,37 @@
                             <input type="file" name="" id="imgInput">
                             <i class="bi bi-plus-circle-dotted"></i>
                         </label>
-                        <img src="./img/user.png" alt="" width="200" height="200" class="img">
+                        <img src="./img/user.png" alt="" width="200" height="200" class="showImg">
                     </div>
 
                     <div class="inputField">
                         <div>
                             <label for="name">Name: </label>
-                            <input type="text" name="" id="name">
+                            <input type="text" name="" id="showName">
                         </div>
                         <div>
                             <label for="age">Age: </label>
-                            <input type="number" name="" id="age">
+                            <input type="number" name="" id="showAge">
                         </div>
                         <div>
                             <label for="city">City: </label>
-                            <input type="text" name="" id="city">
+                            <input type="text" name="" id="showCity">
                         </div>
                         <div>
                             <label for="email">E-mail: </label>
-                            <input type="email" name="" id="email">
+                            <input type="email" name="" id="showEmail">
                         </div>
                         <div>
                             <label for="phone">Phone Number: </label>
-                            <input type="text" name="" id="phone" minlength="10" maxlength="10">
+                            <input type="text" name="" id="showPhone" minlength="10" maxlength="10">
                         </div>
                         <div>
                             <label for="post">Post: </label>
-                            <input type="text" name="" id="post">
+                            <input type="text" name="" id="showPost">
                         </div>
                         <div>
                             <label for="stdate">Start Date: </label>
-                            <input type="date" name="" id="stdate">
+                            <input type="date" name="" id="showstdate">
                         </div>
                     </div>
                 </form>
@@ -208,7 +161,7 @@
                         </div>
                         <div>
                             <label for="stdate">Start Date: </label>
-                            <input type="date" name="" id="stdate" disabled>
+                            <input type="date" name="" id="stdate   " disabled>
                         </div>
                     </div>
                 </form>
