is can show pictures because edit wrong element Hahaha

--- a/index.html
+++ b/index.html
@@ -71,37 +71,37 @@
                             <input type="file" name="" id="imgInput">
                             <i class="bi bi-plus-circle-dotted"></i>
                         </label>
-                        <img src="./img/user.png" alt="" width="200" height="200" class="showImg">
+                        <img src="./img/user.png" alt="" width="200" height="200" class="img">
                     </div>
 
                     <div class="inputField">
                         <div>
                             <label for="name">Name: </label>
-                            <input type="text" name="" id="showName">
+                            <input type="text" name="" id="name">
                         </div>
                         <div>
                             <label for="age">Age: </label>
-                            <input type="number" name="" id="showAge">
+                            <input type="number" name="" id="age">
                         </div>
                         <div>
                             <label for="city">City: </label>
-                            <input type="text" name="" id="showCity">
+                            <input type="text" name="" id="city">
                         </div>
                         <div>
                             <label for="email">E-mail: </label>
-                            <input type="email" name="" id="showEmail">
+                            <input type="email" name="" id="email">
                         </div>
                         <div>
                             <label for="phone">Phone Number: </label>
-                            <input type="text" name="" id="showPhone" minlength="10" maxlength="10">
+                            <input type="text" name="" id="phone" minlength="10" maxlength="10">
                         </div>
                         <div>
                             <label for="post">Post: </label>
-                            <input type="text" name="" id="showPost">
+                            <input type="text" name="" id="post">
                         </div>
                         <div>
-                            <label for="stdate">Start Date: </label>
-                            <input type="date" name="" id="showstdate">
+                            <label for="stDate">Start Date: </label>
+                            <input type="date" name="" id="stDate">
                         </div>
                     </div>
                 </form>
@@ -131,37 +131,37 @@
 
                     <div class="card imgholder">
                         
-                        <img src="./img/user.png" alt="" width="200" height="200" class="img">
+                        <img src="./img/user.png" alt="" width="200" height="200" class="showImg">
                     </div>
 
                     <div class="inputField">
                         <div>
                             <label for="name">Name: </label>
-                            <input type="text" name="" id="name" disabled>
+                            <input type="text" name="" id="showName" disabled>
                         </div>
                         <div>
                             <label for="age">Age: </label>
-                            <input type="number" name="" id="age" disabled>
+                            <input type="number" name="" id="showAge" disabled>
                         </div>
                         <div>
                             <label for="city">City: </label>
-                            <input type="text" name="" id="city" disabled>
+                            <input type="text" name="" id="showCity" disabled>
                         </div>
                         <div>
                             <label for="email">E-mail: </label>
-                            <input type="email" name="" id="email" disabled>
+                            <input type="email" name="" id="showEmail" disabled>
                         </div>
                         <div>
                             <label for="phone">Phone Number: </label>
-                            <input type="text" name="" id="phone" minlength="10" maxlength="10">
+                            <input type="text" name="" id="showPhone" minlength="10" maxlength="10" disabled>
                         </div>
                         <div>
                             <label for="post">Post: </label>
-                            <input type="text" name="" id="post" disabled>
+                            <input type="text" name="" id="showPost" disabled>
                         </div>
                         <div>
-                            <label for="stdate">Start Date: </label>
-                            <input type="date" name="" id="stdate   " disabled>
+                            <label for="stDate">Start Date: </label>
+                            <input type="date" name="" id="showstDate" disabled>
                         </div>
                     </div>
                 </form>
