--- a/index.html
+++ b/index.html
@@ -77,31 +77,31 @@
                     <div class="inputField">
                         <div>
                             <label for="name">Name: </label>
-                            <input type="text" name="" id="name">
+                            <input type="text" name="" id="name" required>
                         </div>
                         <div>
                             <label for="age">Age: </label>
-                            <input type="number" name="" id="age">
+                            <input type="number" name="" id="age" required>
                         </div>
                         <div>
                             <label for="city">City: </label>
-                            <input type="text" name="" id="city">
+                            <input type="text" name="" id="city" required>
                         </div>
                         <div>
                             <label for="email">E-mail: </label>
-                            <input type="email" name="" id="email">
+                            <input type="email" name="" id="email" required>
                         </div>
                         <div>
                             <label for="phone">Phone Number: </label>
-                            <input type="text" name="" id="phone" minlength="10" maxlength="10">
+                            <input type="text" name="" id="phone" minlength="10" maxlength="10" required>
                         </div>
                         <div>
                             <label for="post">Post: </label>
-                            <input type="text" name="" id="post">
+                            <input type="text" name="" id="post" required>
                         </div>
                         <div>
-                            <label for="stDate">Start Date: </label>
-                            <input type="date" name="" id="stDate">
+                            <label for="stdate">Start Date: </label>
+                            <input type="date" name="" id="stdate" required>
                         </div>
                     </div>
                 </form>
@@ -171,6 +171,8 @@
         </div>
     </div>
    </div>
+
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
